--- a/styling/styles.css
+++ b/styling/styles.css
@@ -1,3 +1,26 @@
+
+
+
+/* two fonts defined in a class */
+.Montserrat{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  color: hsl(228, 12%, 48%);
+  font-size: 13px;
+}
+.Fraunces{
+      font-family: "Fraunces", serif;
+      font-optical-sizing: auto;
+      font-weight: 700;
+      font-style: normal;
+      font-variation-settings:
+        "SOFT" 0,
+        "WONK" 0;
+}
+
+/* tags css */
 body{
     background-color: hsl(30, 38%, 92%);
     padding: 0;
@@ -8,10 +31,33 @@ img{
     width: 100%;
     height: 100%;
 }
+button{
+    width: 100%;
+    height:40px;
+    border-radius: 10px;
+    border:none;
+    background-color: hsl(158, 36%, 37%);
+    color: white;
+    transition: 0.3s;
+}
+button:hover{
+    background-color: hsl(212, 21%, 14%);
+}
+svg{
+    transform: translate(-10px,2px);
+}
+
+/* classes css */
 .main_div {
     width:40%;
-    height:50%;
-    
+    height:60%;
+    background-color: white;
+    min-width: 400px;
+    min-height: 450px;
+    /* to curve the borders of main_div */
+    border-radius: 10px;
+    overflow: hidden;
+
     /* to convert the default row wise layout of divs into column wise layout */
     display: flex;
     flex-direction: row;
@@ -23,14 +69,50 @@ img{
     transform: translate(-50%,-50%);
     
 }
+.prices{
+    display: flex;
+    flex-direction: row;
+}
+.attribution{
+    position:absolute;
+    bottom: 0px;
+    left:40%;
 
+    
+}
+
+/* ids css */
 #leftcolumn {
-    width:50%;
+    width:60%;
     height:100%;
 }
 
 #rightcolumn {
-    width: 50%;
+    width: 40%;
     height:100%;
+    margin:25px;
     
+}
+
+
+
+#Offer_price{
+    color:hsl(158, 36%, 37%);
+    font-size: 25px;
+    
+    
+}
+#perfume{
+    letter-spacing: 4px;
+}
+
+#Original_price{
+    font-size: 12px;
+    text-decoration: line-through;
+    transform: translate(15px,20px);
+    
+}
+#button{
+    color:white;
+    font-weight: 500;
 }
