--- a/styling/styles.css
+++ b/styling/styles.css
@@ -93,7 +93,7 @@ svg{
 }
 
 #rightcolumn {
-    width: 40%;
+    width: 50%;
     height:100%;
     margin:25px;
     
@@ -109,6 +109,14 @@ svg{
 }
 #perfume{
     letter-spacing: 4px;
+    
+}
+
+#heading{
+    font-size: 1.7rem;
+}
+#description{
+    line-height: 20px;
 }
 
 #Original_price{
@@ -122,7 +130,7 @@ svg{
     font-weight: 500;
 }
 
-@media (max-width:1080px) {
+@media (max-width:511px) {
     body{
         background-color: hsl(30, 38%, 92%);
         padding-top: 50px;
